Closed Bug 1478605 Opened 6 years ago Closed 6 years ago

Crash due to referring nullptr [@ mozilla::HTMLEditRules::SplitMailCites(bool*)]

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

Details

(Keywords: crash, crashreportid, regression, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1478268 +++

First report is at 2018-07-25 15:45:28:
https://crash-stats.mozilla.com/report/index/0e456519-b44e-48ac-91ff-1c4f60180725
Comment on attachment 8995136 [details]
Bug 1478605 - HTMLEditRules::SplitMailCites() should check if split left node has a primary frame before accessing it

https://reviewboard.mozilla.org/r/259612/#review266632

Thanks, yes, this works as stated in bug 1478268 comment #18.
Comment on attachment 8995136 [details]
Bug 1478605 - HTMLEditRules::SplitMailCites() should check if split left node has a primary frame before accessing it

Sorry, I've never used MozReview. I didn't see an r+ button. Now that MozReview is being replaced, I don't think I'll learn it.
Attachment #8995136 - Flags: review?(jorgk) → review+
(In reply to Jorg K (GMT+2) from comment #3)
> Comment on attachment 8995136 [details]
> Bug 1478605 - HTMLEditRules::SplitMailCites() should check if split left
> node has a primary frame before accessing it
> 
> Sorry, I've never used MozReview. I didn't see an r+ button. Now that
> MozReview is being replaced, I don't think I'll learn it.

Don't you see "Finish Review" above the page (perhaps, needs login to MozReview)? After push it, dropdown appears which has r+ etc. Marking r+ allows to use Autoland. If you don't see it, I'll land the patch manually.
Comment on attachment 8995136 [details]
Bug 1478605 - HTMLEditRules::SplitMailCites() should check if split left node has a primary frame before accessing it

https://reviewboard.mozilla.org/r/259614/#review266638
"Finish Review" didn't show that option before, now it did. Ah well.
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/63b7b9fbdfad
HTMLEditRules::SplitMailCites() should check if split left node has a primary frame before accessing it r=jorgk+176914
Comment on attachment 8995136 [details]
Bug 1478605 - HTMLEditRules::SplitMailCites() should check if split left node has a primary frame before accessing it

And also about this. I'll fix something which you think I should do it in same followup bug.
Attachment #8995136 - Flags: feedback?(m_kato)
https://hg.mozilla.org/mozilla-central/rev/63b7b9fbdfad
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Attachment #8995136 - Flags: feedback?(m_kato) → feedback+
Whiteboard: [tbird crash]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: